--- a/frontend/src/app/views/menu/menu.component.html
+++ b/frontend/src/app/views/menu/menu.component.html
@@ -220,7 +220,7 @@
     </li><!-- End Register Page Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="pages-login.html">
+      <a class="nav-link collapsed" href="login">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Login</span>
       </a>
@@ -242,4 +242,10 @@
 
   </ul>
 
-</aside><!-- End Sidebar-->
+</aside>
+<!-- End Sidebar-->
+
+
+
+
+
