--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -243,7 +243,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .card-body {
   padding: 0 20px 20px 20px;
+  }
+
+.horizontal-scroll{
+  overflow-y: auto;
 }
+
 
 .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.6);
