--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -63,20 +63,22 @@
                   <p class="text-center small">Enter your username & password to login</p>
                 </div>
 
-                <form class="row g-3 needs-validation" novalidate>
+                <form [formGroup]="loginForm"  class="row g-3 needs-validation" novalidate>
 
                   <div class="col-12">
                     <label for="yourUsername" class="form-label">Username</label>
                     <div class="input-group has-validation">
 <!--                      <span class="input-group-text" id="inputGroupPrepend">@</span>-->
-                      <input type="text" name="username" class="form-control" id="yourUsername" required>
+<!--                      <input type="text" name="username" class="form-control" id="yourUsername" required>-->
+                      <input id="yourUsername" matInput formControlName="username" class="form-control"  >
                       <div class="invalid-feedback">Please enter your username.</div>
                     </div>
                   </div>
 
                   <div class="col-12">
                     <label for="yourPassword" class="form-label">Password</label>
-                    <input type="password" name="passwword" class="form-control" id="yourPassword" required>
+<!--                    <input type="password" name="passwword" class="form-control" id="yourPassword" required>-->
+                    <input type="password" matInput formControlName="password" id="yourPassword" class="form-control">
                     <div class="invalid-feedback">Please enter your password!</div>
                   </div>
 
@@ -87,10 +89,11 @@
                     </div>
                   </div>
                   <div class="col-12">
-                    <button class="btn btn-primary w-100" type="submit">Login</button>
+<!--                    <button class="btn btn-primary w-100" mat-flat-button type="submit">Login</button>-->
+                    <button [disabled]="loginForm.invalid" class="btn btn-primary w-100" class="btn btn-primary w-100"  (click)="submit()">Login</button>
                   </div>
                   <div class="col-12">
-                    <p class="small mb-0">Don't have account? <a href="pages-register.html">Create an account</a></p>
+                    <p class="small mb-0">Don't have account? <a href="registration">Create an account</a></p>
                   </div>
                 </form>
 
