--- a/frontend/src/app/views/main/main.component.html
+++ b/frontend/src/app/views/main/main.component.html
@@ -16,21 +16,22 @@
     </form>
   </div><!-- End Search Bar -->
 
-  <nav class="header-nav ms-auto">
+  <app-header-nav class="ms-auto"></app-header-nav>
+  <!--<nav class="header-nav ms-auto">
     <ul class="d-flex align-items-center">
 
       <li class="nav-item d-block d-lg-none">
         <a class="nav-link nav-icon search-bar-toggle " href="#">
           <i class="bi bi-search"></i>
         </a>
-      </li><!-- End Search Icon-->
+      </li>&lt;!&ndash; End Search Icon&ndash;&gt;
 
       <li class="nav-item dropdown">
 
         <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
           <i class="bi bi-bell"></i>
           <span class="badge bg-primary badge-number">4</span>
-        </a><!-- End Notification Icon -->
+        </a>&lt;!&ndash; End Notification Icon &ndash;&gt;
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
           <li class="dropdown-header">
@@ -96,16 +97,16 @@
             <a href="#">Show all notifications</a>
           </li>
 
-        </ul><!-- End Notification Dropdown Items -->
+        </ul>&lt;!&ndash; End Notification Dropdown Items &ndash;&gt;
 
-      </li><!-- End Notification Nav -->
+      </li>&lt;!&ndash; End Notification Nav &ndash;&gt;
 
       <li class="nav-item dropdown">
 
         <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
           <i class="bi bi-chat-left-text"></i>
           <span class="badge bg-success badge-number">3</span>
-        </a><!-- End Messages Icon -->
+        </a>&lt;!&ndash; End Messages Icon &ndash;&gt;
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
           <li class="dropdown-header">
@@ -162,16 +163,16 @@
             <a href="#">Show all messages</a>
           </li>
 
-        </ul><!-- End Messages Dropdown Items -->
+        </ul>&lt;!&ndash; End Messages Dropdown Items &ndash;&gt;
 
-      </li><!-- End Messages Nav -->
+      </li>&lt;!&ndash; End Messages Nav &ndash;&gt;
 
       <li class="nav-item dropdown pe-3">
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
           <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
           <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
-        </a><!-- End Profile Iamge Icon -->
+        </a>&lt;!&ndash; End Profile Iamge Icon &ndash;&gt;
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
@@ -219,11 +220,12 @@
             </a>
           </li>
 
-        </ul><!-- End Profile Dropdown Items -->
-      </li><!-- End Profile Nav -->
+        </ul>&lt;!&ndash; End Profile Dropdown Items &ndash;&gt;
+      </li>&lt;!&ndash; End Profile Nav &ndash;&gt;
 
     </ul>
-  </nav><!-- End Icons Navigation -->
+  </nav>-->
+  <!-- End Icons Navigation -->
 
 </header>
 <!-- End Header -->
@@ -520,7 +522,8 @@
               </div>
 
             </div>-->
-            <app-table></app-table>
+            <app-table *ngIf="isTableEnable"></app-table>
+            <app-registration *ngIf="isRegistrationEnable"></app-registration>
           </div>
           <!-- End Recent Sales -->
 
