Spring_angular_work_auth_role_end

--- a/frontend/src/app/views/login/login.component.html
+++ b/frontend/src/app/views/login/login.component.html
@@ -93,7 +93,7 @@
                     <button [disabled]="loginForm.invalid" class="btn btn-primary w-100" class="btn btn-primary w-100"  (click)="submit()">Login</button>
                   </div>
                   <div class="col-12">
-                    <p class="small mb-0">Don't have account? <a href="registration">Create an account</a></p>
+                    <p class="small mb-0">Don't have account? <a href="reg">Create an account</a></p>
                   </div>
                 </form>
 
