Spring_angular_tables_1

--- a/frontend/src/app/views/main/main.component.html
+++ b/frontend/src/app/views/main/main.component.html
@@ -523,6 +523,7 @@
 
             </div>-->
             <app-table *ngIf="isTableEnable"></app-table>
+            <app-table-for-me *ngIf="isTableForMeEnable"></app-table-for-me>
             <app-registration *ngIf="isRegistrationEnable"></app-registration>
           </div>
           <!-- End Recent Sales -->
