Spring_angular_websocket_01

--- a/frontend/src/app/views/main/main.component.html
+++ b/frontend/src/app/views/main/main.component.html
@@ -525,6 +525,7 @@
             <app-table *ngIf="isTableEnable"></app-table>
             <app-table-for-me *ngIf="isTableForMeEnable"></app-table-for-me>
             <app-registration *ngIf="isRegistrationEnable"></app-registration>
+            <app-addtask></app-addtask>
           </div>
           <!-- End Recent Sales -->
 
